<resources>
    <string name="app_name">MadLevel3Task1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_to_the_games_rating_app">Welcome to the Games Rating app!</string>
    <string name="click_start_to_start_rating">Click START to start rating.</string>
    <string name="start">START</string>
    <string name="rate_the_following_game_from_1_to_5_stars">Rate the following game from 1 to 5 stars!</string>
    <string name="to_summary">TO SUMMARY</string>
    <string name="idk_something">idk something</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_over">txtStartOver</string>
    <string name="start_again">START OVER</string>
</resources>